# wad-chrome-control

./: .gitignore  Cargo.toml
src/: chrome.rs  chrome_controller.rs  chrome_supervisor.rs  config.rs  file_change_watcher.rs  main.rs  web.rs
src/chrome/: config.rs  controller.rs  driver.rs  supervisor.rs
src/templates/: client-id.hbs  missing-client-id.hbs
