[package]
name = "wad-chrome-control"
version = "0.1.0"
authors = ["peaceman <nixalio@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
headless_chrome = "0.9.0"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
url = "2.2.1"
portpicker = "0.1.0"
anyhow = "1.0.38"
tracing = "0.1.25"
serde_yaml = "0.8.17"
serde = "1.0.124"
tracing-subscriber = "0.2.16"
